--- a/dvdb-war/src/main/resources/messages.properties
+++ b/dvdb-war/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
+itemManager.h1=<h1>#{selectedItem.title}</h1>
+
 validator.email=Keine g\u00fcltige Email Adresse
 statistics.all.browserTitle=#{messages['statistics.all.headline']} - #{messages['application.site']}
 statistics.all.headline=DVD Eink\u00e4ufe nach Monat
