--- a/dvdb-war/src/main/resources/messages.properties
+++ b/dvdb-war/src/main/resources/messages.properties
@@ -1,4 +1,15 @@
+br=<br/>
 itemManager.h1=<h1>#{selectedItem.title}</h1>
+
+sidebarActions.h3=<h3>Aktionen</h3>
+ul=<ul>
+ul.c=</ul>
+li=<li>
+li.bgnone=<li style="background: none;">
+li.c=</li>
+
+sidebarActions.stats.h3=<h3>Statistik zu #{itemDetails.title}</h3>
+
 
 editDialog.headline=<h1>Eintrag bearbeiten</h1>
 
